--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -25,3 +25,7 @@
     transform: none;
   }
 </style>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="packages/core/core.css" type="text/css">
